--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>BookmarkAppV1</title>
+  <title>Bookmark App Version 1</title>
   <base href="/bookmark-app-v1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <!-- Latest CDN production Javascript and CSS -->
+  <script src="https://global.oktacdn.com/okta-signin-widget/6.3.3/js/okta-sign-in.min.js"
+    type="text/javascript"></script>
+
+  <link href="https://global.oktacdn.com/okta-signin-widget/6.3.3/css/okta-sign-in.min.css" type="text/css"
+    rel="stylesheet" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
